<resources>
    <string name="app_name">Get A Cut</string>
    <string name="action_settings">Settings</string>

    <string name="tourist_bd_font_family">sans-serif-medium</string>

    <string name="sign_in">Sign In</string>
    <string name="enter_mail">Enter your mail</string>
    <string name="enter_pass">Password</string>
    <string name="sign_in_options">Sign in Options</string>
    <string name="register_now">Register Now</string>

    <string name="upload">Upload</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="register">Register</string>
    <string name="enter_confirm_pass">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_barber">Barber</string>
    <string name="book">Book</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
