<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_profile"
            tools:ignore="ContentDescription" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/avatar_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="8dp"
            android:background="@color/white"
            fancy:fb_textSize="16sp"
            fancy:fb_borderWidth="1dp"
            fancy:fb_focusColor="@color/gray"
            fancy:fb_defaultColor="@color/colorCyan"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/upload"
            fancy:fb_textColor="@color/white" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/user_type_nice_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_line" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/display_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/display_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/tourist_bd_font_family"
                android:hint="@string/enter_display_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/email_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/tourist_bd_font_family"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/pass_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/tourist_bd_font_family"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_pass_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" >

            <EditText
                android:id="@+id/confirm_pass_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/tourist_bd_font_family"
                android:hint="@string/enter_confirm_pass"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/register_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="10dp"
            android:background="@color/white"
            fancy:fb_textSize="16sp"
            fancy:fb_borderWidth="1dp"
            fancy:fb_focusColor="@color/colorCyanFocused"
            fancy:fb_defaultColor="@color/colorCyan"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/register"
            fancy:fb_textColor="@color/white" />

    </LinearLayout>

</ScrollView>
